syntax = "proto3";

package proto;

service AwesomeService {
  rpc ListPerson(RequestType) returns (stream Person) {};
  rpc AddPerson(Person) returns (ResponseType) {}

}

message ResponseType {
  string name = 1;
}

message RequestType {
  string message = 1;
}

message Person {
  string name = 1;
  int32  age  = 2;
}
